# grv-team-bot

./: .env.example  .gitignore  .replit  BOT_HOSTING_NET_DEPLOYMENT.md  DEPLOY_CHECKLIST.md  ORACLE_CLOUD_DEPLOYMENT.md  WISPBYTE_DEPLOYMENT.md  WISPBYTE_LAVALINK_SETUP.md  application_system.py  bot.py  commands.py  config.py  email_service.py  integrated_launcher.py  main.py  models.py  package-lock.json  pyproject.toml  replit.md  requirements.txt  setup-oracle.sh  voice_handler.py  web_app.py  web_models.py
lavalink/: application.yml
web/static/css/: style.css
web/static/js/: main.js
web/templates/: applications.html  base.html  bot_control.html  bot_message.html  bot_status.html  channels.html  dashboard.html  forgot_password.html  login.html  member_moderation.html  menu.html  register.html  restricted.html  settings.html  system_settings.html  users.html  welcome_settings.html
